# bevy_global_input

./: Cargo.toml  README.md
examples/: hotkey.rs  log_events.rs  mouse_pos.rs  move_mouse.rs
src/: lib.rs  provide_mki.rs  provide_mouce.rs
